--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-top: 1px solid black;
+    border-top: black solid 1px;
 }
 
 .footer-title {
