--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,4 @@
-.head-wrapper {
+.header-wrapper {
     height: 10vh;
     width: 100%;
     display: flex;
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid black;
+    border-bottom: black solid 1px;
 }
 
 .header-title {
